<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">TodayWeather</string>
    <string name="launcher_name" translatable="false">@string/app_name</string>
    <string name="activity_name" translatable="false">@string/launcher_name</string>
    <string name="widget_name" translatable="false">@string/launcher_name</string>
    <string name="degree" translatable="false">˚</string>
    <string name="temperature_separator" translatable="false">/</string>
    <string name="weather_icon" translatable="false">weather icon</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="same_yesterday">Same as yesterday</string>
    <string name="cmp_yesterday">%1$s˚ from yesterday</string>
    <string name="update">Update</string>
    <string name="move_main">Go to App</string>
    <string name="msg_do_not_widget_data_plz_update">Unable to retrieve weather information.\nClick here to refresh.</string>
    <string name="fail_to_get_location">TodayWeather : Unable to detect your location.</string>
    <string name="current_position">Current Location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="aqi">AQI</string>
    <string name="pm10">PM10</string>
    <string name="pm25">PM2.5</string>
    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="unhealthy_for_sensitive_groups">Unhealthy for sensitive groups</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="very_unhealthy">Very unhealthy</string>
    <string name="hazardous">Hazardous</string>
    <string name="this_location_is_not_supported">No weather data available</string>
    <string name="fail_to_get_geoinfo">TodayWeather : Unable to retrieve local data</string>
    <string name="loading">Loading</string>
    <string name="general">General</string>
    <string name="style">Style</string>
    <string name="location">Location</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="transparency">Transparency</string>
    <string name="background_color">Background Color</string>
    <string name="font_color">Font Color</string>
    <string name="add_locations">Add locations in the app</string>
</resources>
