<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dip"
    tools:showIn="@layout/w2x1_widget_provider"
    android:longClickable="false">
    <LinearLayout
        android:id="@+id/msg_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:text="@string/msg_do_not_widget_data_plz_update"/>
    </LinearLayout>

    <!-- main weather content -->
    <RelativeLayout
        android:id="@+id/weather_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- weather -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <!-- current location -->
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="10sp"
                    android:textColor="#ffffff"
                    android:text="@string/loading"
                    android:textAlignment="center"/>

                <!-- current temperature and sky -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/yesterday_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textStyle="bold"
                        android:textSize="38sp"
                        android:textColor="#ffffff"
                        android:text=""/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="8dip">
                        <ImageView
                            android:id="@+id/reddot"
                            android:src="@drawable/reddot"
                            android:layout_width="7dip"
                            android:layout_height="7dip"
                            android:layout_gravity="center_vertical"/>
                        <ImageView
                            android:id="@+id/current_sky"
                            android:layout_width="21dip"
                            android:layout_height="21dip"
                            android:layout_gravity="bottom"
                            android:src="@drawable/sun"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- show today temperature compaere with yesterday temperature-->
                <TextView
                    android:id="@+id/cmp_yesterday_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="9sp"
                    android:textColor="#ffffff"
                    android:text=""
                    android:textAlignment="center"/>
            </LinearLayout>

            <!-- max / min temperature -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginLeft="5dip"
                android:weightSum="1">

                <!-- today max / min temperature -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="top">
                    <TextView
                        android:id="@+id/today_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="9sp"
                        android:textColor="#ffffff"
                        android:text="@string/today"/>
                    <LinearLayout
                        android:id="@+id/bg_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:padding="2dip"
                        android:background="@drawable/bg_round_white_box">
                        <TextView
                            android:id="@+id/today_high_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="9sp"
                            android:textColor="#59515c"
                            android:text=""/>
                        <TextView
                            android:id="@+id/today_separator_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="9sp"
                            android:textColor="#59515c"
                            android:text="@string/temperature_separator"/>
                        <TextView
                            android:id="@+id/today_low_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="9sp"
                            android:textColor="#59515c"
                            android:text="" />
                    </LinearLayout>
                </LinearLayout>

                <!-- yesterday max / min temperature -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dip"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="bottom">
                    <TextView
                        android:id="@+id/yesterday_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="9sp"
                        android:textColor="#a09b9b"
                        android:text="@string/yesterday"/>
                    <LinearLayout
                        android:id="@+id/bg_yesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:padding="2dip"
                        android:background="@drawable/bg_round_gray_box">
                        <TextView
                            android:id="@+id/yesterday_high_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="9sp"
                            android:textColor="#484749"
                            android:text="" />
                        <TextView
                            android:id="@+id/yesterday_separator_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="9sp"
                            android:textColor="#59515c"
                            android:text="@string/temperature_separator"/>
                        <TextView
                            android:id="@+id/yesterday_low_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="9sp"
                            android:textColor="#484749"
                            android:text="" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
